# dalal-street-bots-2022

./: .gitignore  .gitmodules  README.md
.github/workflows/: CheckLintServer.yaml  server-check_lint.yaml  server-tests.yaml
client/: .gitignore  README.md  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  ColorModeSwitcher.tsx  Logo.tsx  index.tsx  serviceWorker.ts
server/: .example.env  .gitignore  README.md  alembic.ini  pyproject.toml  setup.cfg
server/app/: main.py
server/app/api/resources/: strings.py
server/app/api/routes/: api.py  auth.py
server/app/api/schemas/: api.py  auth.py  responses.py
server/app/core/: auth.py  config.py  events.py  helpers.py  logger.py  logging.py  utils.py
server/app/core/dependencies/: database.py  grpc.py
server/app/core/settings/: app.py  base.py  database.py  dev.py  prod.py  test.py
server/app/db/: connection.py  errors.py
server/app/db/crud/: base.py  botTypes.py  bot_types.py  bots.py  log.py
server/app/db/migrations/: env.py  helper.py  script.py.mako
server/app/db/migrations/versions/: 976573dc98f2_create_logs_table.py  ca482b679fc1_create_bots_table.py  caf85e6ee2c7_add_server_bot_id_to_bots.py  fb5e5ba377a5_create_bot_types_table.py
server/app/db/schemas/: botTypes.py  bot_types.py  bots.py  log.py  timestamp.py
server/app/grpc_manager/: base.py  grpc_api.py  meta_data.py  metadata.py  utils.py
server/app/grpc_manager/action_service/: auth_action_service.py  base_action_service.py  bot_action_service.py  order_action_service.py  stocks_action_service.py
server/scripts/: build_proto.sh  format.sh  lint.sh  test.sh
server/tests/: test_dalal_street_bots_2022.py
(+4 files in other folders)
