[tool.poetry]
name = "dalal-street-bots-2022"
version = "0.1.0"
description = ""
authors = ["Delta Force <delta@nitt.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pydantic = "^1.9.0"
mypy = "^0.930"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.12b0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
