[tool.poetry]
name = "dalal-street-bots-2022"
version = "0.1.0"
description = ""
authors = ["Delta Force <delta@nitt.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
pydantic = "^1.9.0"
grpcio-tools = "^1.43.0"
grpcio = "^1.43.0"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"
SQLAlchemy = "^1.4.29"
PyMySQL = "0.9.3"
mysqlclient = "^2.1.0"
aiomysql = "^0.0.22"
asyncio = "^3.4.3"
loguru = "^0.5.3"
PyPika = "^0.48.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
isort = "^5.10.1"
black = "^21.12b0"
autoflake = "^1.4"
flake8 = "^4.0.1"
mypy = "^0.930"
types-orjson = "^3.6.2"
types-ujson = "^4.2.1"
types-python-dateutil = "^2.8.7"
types-PyMySQL = "^1.0.13"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | app/proto_build
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "app.main:main"
